[package]
name = "code"
version = "1.6.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dfvs_solver"
path = "src/lib.rs"

[[bin]]
name = "exact"
path = "src/bin/exact.rs"

[[bin]]
name = "kernel"
path = "src/bin/kernel.rs"

[dependencies]
itertools = "0.10.1"
clap = { version = "3.0.13", features = ["derive", "regex"] }
ctrlc = "3.2.1"
regex = "1.5.5"
fxhash = "0.2.1"
duck_and_cover = { git = "https://github.com/mndmnky/duck-and-cover", version = "1.6.0" }
