[package]
name = "code"
version = "1.9.1-testing"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dfvs_solver"
path = "src/lib.rs"

[[bin]]
name = "exact"
path = "src/bin/exact.rs"

[[bin]]
name = "experiments"
path = "src/bin/experiments.rs"

[[bin]]
name = "experiments_v2"
path = "src/bin/experiments_v2.rs"

[[bin]]
name = "typec"
path = "src/bin/type_c_exp.rs"

[[bin]]
name = "typeb"
path = "src/bin/type_b_exp.rs"

[[bin]]
name = "typea"
path = "src/bin/type_a_exp.rs"

[[bin]]
name = "exact_exp"
path = "src/bin/exact_exp.rs"

[[bin]]
name = "all_exact_exp"
path = "src/bin/all_exact_exp.rs"

[[bin]]
name = "instance_stats"
path = "src/bin/init_stats.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
itertools = "0.10.1"
clap = { version = "3.0.13", features = ["derive", "regex"] }
ctrlc = "3.2.1"
regex = "1.5.5"
fxhash = "0.2.1"
duck_and_cover = { git = "https://github.com/mndmnky/duck-and-cover", version = "1.6.0" }
